--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "wpextend/wp-local-instance",
     "description": "",
-    "version": "0.0.1",
+    "version": "0.0.11",
     "type": "project",
     "license": "proprietary",
     "authors": [
@@ -16,6 +16,9 @@
         "email": "paul.balanche@gmail.com"
     },
     "scripts": {
-        "post-root-package-install": "composer create-project roots/bedrock"
+        "post-create-project-cmd": [
+            "composer create-project roots/bedrock",
+            "rm composer.json"
+        ]
     }
 }
