--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "wpextend/wp-local-instance",
     "description": "",
-    "version": "0.0.11",
+    "version": "0.0.12",
     "type": "project",
     "license": "proprietary",
     "authors": [
@@ -18,7 +18,9 @@
     "scripts": {
         "post-create-project-cmd": [
             "composer create-project roots/bedrock",
-            "rm composer.json"
+            "composer require wpextend/wpextend --working-dir=bedrock",
+            "rm composer.json && rm composer.lock && rm -r vendor",
+            "cp -a ./bedrock/. ./"
         ]
     }
 }
