--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "wpextend/wp-local-instance",
     "description": "",
-    "version": "0.0.12",
+    "version": "0.0.13",
     "type": "project",
     "license": "proprietary",
     "authors": [
@@ -20,7 +20,8 @@
             "composer create-project roots/bedrock",
             "composer require wpextend/wpextend --working-dir=bedrock",
             "rm composer.json && rm composer.lock && rm -r vendor",
-            "cp -a ./bedrock/. ./"
+            "mv ./bedrock/. ./",
+            "rm bedrock"
         ]
     }
 }
