--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "wpextend/wp-local-instance",
     "description": "",
-    "version": "0.0.17",
+    "version": "0.0.18",
     "type": "project",
     "license": "proprietary",
     "authors": [
@@ -19,9 +19,7 @@
         "post-create-project-cmd": [
             "composer create-project roots/bedrock",
             "composer require wpextend/wpextend --working-dir=bedrock",
-            "rm composer.json && rm composer.lock && rm -r vendor",
-            "mv bedrock/* ./ && mv bedrock/.* ./",
-            "rm bedrock"
+            "bash post-create-project-cmd.sh"
         ]
     }
 }
