--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "wpextend/wp-local-instance",
     "description": "",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "type": "project",
     "license": "proprietary",
     "authors": [
@@ -18,7 +18,8 @@
     "scripts": {
         "post-create-project-cmd": [
             "composer create-project roots/bedrock",
-            "composer require wpextend/wpextend --working-dir=bedrock",
+            "composer require wpextend/wp-advanced-block-theme --working-dir=bedrock",
+            "composer require wpextend/wp-starter-theme --working-dir=bedrock",
             "bash post-create-project-cmd.sh"
         ]
     }
