--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "wpextend/wp-local-instance",
     "description": "",
-    "version": "0.0.54",
+    "version": "0.0.55",
     "type": "project",
     "license": "proprietary",
     "authors": [
@@ -20,11 +20,7 @@
             "composer create-project roots/bedrock",
             "composer require wpextend/wp-advanced-block-theme --working-dir=bedrock",
             "composer require wpextend/wp-starter-theme --working-dir=bedrock",
-            "bash post-create-project-cmd.sh",
-            "cd docker && make",
-            "echo \"Waiting DB starting...\"",
-            "sleep 10",
-            "make wp-install"
+            "bash post-create-project-cmd.sh"
         ]
     }
 }
