--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "wpextend/wp-local-instance",
     "description": "",
-    "version": "0.0.60",
+    "version": "0.0.61",
     "type": "project",
     "license": "proprietary",
     "authors": [
@@ -21,7 +21,7 @@
             "composer require wpextend/wp-advanced-block-theme --working-dir=bedrock",
             "composer require wpextend/wp-starter-theme --working-dir=bedrock",
             "bash post-create-project-cmd.sh",
-            "cd docker && make wp-core-install"
+            "cd docker && make wp-first-start && make wp-core-install"
         ]
     }
 }
