--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "wpextend/wp-local-instance",
     "description": "",
-    "version": "0.0.73",
+    "version": "0.0.8",
     "type": "project",
     "license": "proprietary",
     "authors": [
@@ -19,7 +19,7 @@
         "post-create-project-cmd": [
             "rm composer.json",
             "rm README.md",
-            "bash wpe.sh init"
+            "bash wpe.sh"
         ]
     }
 }
